Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Vụ giải quyết mâu thuẫn náo loạn ở Quảng Nam: Người lái ô tô lãnh 20 năm tù",
+    "content": "Vào ngày 10-3-2025, Tòa án nhân dân tỉnh Quảng Nam đã tuyên án Đỗ Quốc Khánh 20 năm tù về tội giết người sau khi anh này lái ô tô tông vào nhóm thanh niên trong một vụ mâu thuẫn. Sự việc xảy ra vào tối 29-1-2023 khi Khánh và nhóm của Phan Đức Nam có xung đột trong quán cà phê. Sau khi bị nhóm này ném đá vào xe mình, Khánh đã quay lại và tấn công họ, khiến một người tên N.Đ.T. thiệt mạng. Ngoài Khánh, 6 bị cáo khác cũng nhận án tù vì tội gây rối trật tự công cộng.",
+    "link": "https://tuoitre.vn/vu-giai-quyet-mau-thuan-nao-loan-o-quang-nam-nguoi-lai-o-to-lanh-20-nam-tu-20250310174755632.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Vì sao Đỗ Quốc Khánh bị tuyên án 20 năm tù?",
+    "answers": [
+      {
+        "text": "Do tội giết người",
+        "correct": true
+      },
+      {
+        "text": "Vì gây rối trật tự công cộng",
+        "correct": false
+      },
+      {
+        "text": "Do lái xe không có giấy phép",
+        "correct": false
+      },
+      {
+        "text": "Vì tham gia đánh nhau",
+        "correct": false
+      },
+      {
+        "text": "Do say xỉn khi lái xe",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Kanye West muốn người phụ nữ của mình mặc hở, thích thao túng người khác",
     "content": "Trong một buổi phỏng vấn, Amber Rose, tình cũ của Kanye West, đã tiết lộ rằng nam rapper thích ép bạn gái ăn mặc hở bạo để thu hút sự chú ý từ những người khác. Cô cho biết Kanye đã yêu cầu cô và Kim Kardashian mặc những bộ trang phục gợi cảm, và điều này khiến cô cảm thấy không thoải mái. Amber cũng chia sẻ rằng mối quan hệ kéo dài hai năm với Kanye đã ảnh hưởng lớn đến cô, mặc dù cô không thích phong cách của anh. Những phát ngôn này đã gây ra nhiều tranh cãi trên mạng xã hội, đặc biệt sau khi Kanye để vợ hiện tại của mình xuất hiện với trang phục gây sốc tại lễ trao giải Grammy.",
     "link": "https://dantri.com.vn/giai-tri/kanye-west-muon-nguoi-phu-nu-cua-minh-mac-ho-thich-thao-tung-nguoi-khac-20250310114137440.htm",
@@ -1279,6 +1310,33 @@
     ]
   },
   {
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "answers": [
+      {
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
     "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
     "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
@@ -1328,33 +1386,6 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
-    "answers": [
-      {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -2098,6 +2129,33 @@
     ]
   },
   {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -2151,33 +2209,6 @@
       },
       {
         "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
