Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Messi từng tẩy chay đồng đội Argentina",
+    "content": "Sau trận thua của Barcelona trước PSG, Lionel Messi đã tẩy chay Leandro Paredes, không nói chuyện với anh trong suốt ba tháng vì hiểu nhầm. Paredes chỉ trích một đồng đội tại PSG và Messi đã nghĩ rằng lời chỉ trích đó nhắm vào mình. Mối quan hệ của họ chỉ được cải thiện khi cả hai cùng gia nhập PSG, và họ đã cùng nhau giành nhiều danh hiệu, trong đó có chức vô địch World Cup 2022.",
+    "link": "https://vnexpress.net/messi-tung-tay-chay-dong-doi-argentina-4859310.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao Messi lại tẩy chay Paredes trong ba tháng?",
+    "answers": [
+      {
+        "text": "Vì hiểu nhầm về lời chỉ trích của Paredes.",
+        "correct": true
+      },
+      {
+        "text": "Vì Messi không thích Paredes.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ có bất đồng ý kiến về chiến thuật.",
+        "correct": false
+      },
+      {
+        "text": "Vì Messi muốn tập trung vào sự nghiệp cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
     "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
     "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
@@ -1337,28 +1364,28 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
+    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
+    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
     "answers": [
       {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
         "correct": true
       },
       {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "text": "Không, chỉ là một bệnh nhẹ.",
         "correct": false
       },
       {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "text": "Có nhưng không gây biến chứng nặng.",
         "correct": false
       },
       {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
+        "text": "Có thể tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1391,28 +1418,28 @@
     ]
   },
   {
-    "title": "Hội chứng Guillain - Barré nguy hiểm không?",
-    "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
-    "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Hội chứng Guillain - Barré có nguy hiểm không?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
     "answers": [
       {
-        "text": "Có, rất nguy hiểm nếu không điều trị kịp thời.",
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
         "correct": true
       },
       {
-        "text": "Không, chỉ là một bệnh nhẹ.",
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
         "correct": false
       },
       {
-        "text": "Có nhưng không gây biến chứng nặng.",
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
         "correct": false
       },
       {
-        "text": "Có thể tự khỏi mà không cần điều trị.",
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -2156,6 +2183,37 @@
     ]
   },
   {
+    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
+    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
+    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
+    "answers": [
+      {
+        "text": "3,99%/năm",
+        "correct": true
+      },
+      {
+        "text": "4,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "5,0%/năm",
+        "correct": false
+      },
+      {
+        "text": "2,5%/năm",
+        "correct": false
+      },
+      {
+        "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
     "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
     "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
@@ -2205,37 +2263,6 @@
       },
       {
         "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
-    "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
-    "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Gói tín dụng ưu đãi của PVcomBank có lãi suất bao nhiêu?",
-    "answers": [
-      {
-        "text": "3,99%/năm",
-        "correct": true
-      },
-      {
-        "text": "4,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "5,0%/năm",
-        "correct": false
-      },
-      {
-        "text": "2,5%/năm",
-        "correct": false
-      },
-      {
-        "text": "4,0%/năm",
         "correct": false
       }
     ]
