--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "5 mẹo giúp chồng bớt cằn nhằn, biết lắng nghe",
+    "content": "Bài viết chia sẻ 5 mẹo giúp vợ cải thiện giao tiếp với chồng, giúp chồng bớt cằn nhằn và biết lắng nghe hơn. Đầu tiên, chọn thời điểm thích hợp để nói chuyện sẽ giúp chồng dễ chịu hơn. Tiếp theo, cần kiểm soát cảm xúc và tránh la hét trong cãi cọ. Ngoài ra, sự tôn trọng ý kiến của chồng và nhẹ nhàng giải thích mong muốn thay vì ra lệnh cũng rất quan trọng. Cuối cùng, tránh sử dụng những từ ngữ chỉ trích như \"không bao giờ\" hay \"lúc nào cũng\" để duy trì một cuộc đối thoại tích cực.",
+    "link": "https://vnexpress.net/5-meo-giup-chong-bot-can-nhan-biet-lang-nghe-4857617.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để giúp chồng bớt cằn nhằn và biết lắng nghe?",
+    "answers": [
+      {
+        "text": "Chọn thời điểm thích hợp để nói chuyện.",
+        "correct": true
+      },
+      {
+        "text": "La hét khi cãi cọ.",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng từ ngữ chỉ trích.",
+        "correct": false
+      },
+      {
+        "text": "Ra lệnh cho chồng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Messi từng tẩy chay đồng đội Argentina",
     "content": "Sau trận thua của Barcelona trước PSG, Lionel Messi đã tẩy chay Leandro Paredes, không nói chuyện với anh trong suốt ba tháng vì hiểu nhầm. Paredes chỉ trích một đồng đội tại PSG và Messi đã nghĩ rằng lời chỉ trích đó nhắm vào mình. Mối quan hệ của họ chỉ được cải thiện khi cả hai cùng gia nhập PSG, và họ đã cùng nhau giành nhiều danh hiệu, trong đó có chức vô địch World Cup 2022.",
     "link": "https://vnexpress.net/messi-tung-tay-chay-dong-doi-argentina-4859310.html",
@@ -1099,33 +1126,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -1148,6 +1148,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1891,33 +1918,6 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
     "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
     "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
@@ -1971,6 +1971,33 @@
       },
       {
         "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -4912,33 +4939,6 @@
       },
       {
         "text": "Trần Văn C",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quận Tân Phú chọn khu đất rộng 26ha làm TOD dọc theo tuyến metro số 2",
-    "content": "UBND quận Tân Phú đã chọn khu đất rộng 26ha tại phường Tây Thạnh để phát triển mô hình TOD dọc theo tuyến metro số 2. Khu đất này nằm gần trục đường Tây Thạnh và Trường Chinh. Dự kiến, các bước lập quy hoạch và lựa chọn nhà đầu tư sẽ được thực hiện trong năm 2025, với mong muốn tạo ra một khu đô thị hiện đại và thuận tiện cho người dân. Tuyến metro số 2 có tổng chiều dài 11km, kết nối nhiều quận và dự kiến hoàn thành vào năm 2030.",
-    "link": "https://tuoitre.vn/quan-tan-phu-chon-khu-dat-rong-26ha-lam-tod-doc-theo-tuyen-metro-so-2-20250309174844156.htm",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Quận Tân Phú đang triển khai dự án nào dọc theo tuyến metro số 2?",
-    "answers": [
-      {
-        "text": "Mô hình TOD",
-        "correct": true
-      },
-      {
-        "text": "Khu dân cư",
-        "correct": false
-      },
-      {
-        "text": "Trung tâm thương mại",
-        "correct": false
-      },
-      {
-        "text": "Công viên giải trí",
         "correct": false
       }
     ]
