--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Lãnh đạo Greenland: \"Tổng thống Trump rất khó đoán định\"",
+    "content": "Lãnh đạo Greenland, Mute Egede, đã chỉ trích Tổng thống Mỹ Donald Trump, gọi ông là một nhân vật \"rất khó đoán định\". Ông Egede cho biết sự can thiệp của Trump vào cuộc bầu cử tại Greenland là không thể chấp nhận và nhấn mạnh rằng 85% người dân Greenland không muốn trở thành một phần của Mỹ. Ông cũng khẳng định rằng tương lai của Greenland nằm trong liên minh phương Tây và cần củng cố quan hệ với các quốc gia tôn trọng họ.",
+    "link": "https://dantri.com.vn/the-gioi/lanh-dao-greenland-tong-thong-trump-rat-kho-doan-dinh-20250310184022044.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao lãnh đạo Greenland lại chỉ trích Tổng thống Trump?",
+    "answers": [
+      {
+        "text": "Vì ông Trump được coi là một nhân vật khó đoán định.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông Trump muốn mua lại Greenland.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông Trump không tôn trọng cuộc bầu cử ở Greenland.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông Trump đã làm tăng sự quan tâm của người dân Greenland với Mỹ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "5 mẹo giúp chồng bớt cằn nhằn, biết lắng nghe",
     "content": "Bài viết chia sẻ 5 mẹo giúp vợ cải thiện giao tiếp với chồng, giúp chồng bớt cằn nhằn và biết lắng nghe hơn. Đầu tiên, chọn thời điểm thích hợp để nói chuyện sẽ giúp chồng dễ chịu hơn. Tiếp theo, cần kiểm soát cảm xúc và tránh la hét trong cãi cọ. Ngoài ra, sự tôn trọng ý kiến của chồng và nhẹ nhàng giải thích mong muốn thay vì ra lệnh cũng rất quan trọng. Cuối cùng, tránh sử dụng những từ ngữ chỉ trích như \"không bao giờ\" hay \"lúc nào cũng\" để duy trì một cuộc đối thoại tích cực.",
     "link": "https://vnexpress.net/5-meo-giup-chong-bot-can-nhan-biet-lang-nghe-4857617.html",
@@ -1099,33 +1126,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
     "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
     "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
@@ -1175,6 +1175,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -1918,33 +1945,6 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
-    "answers": [
-      {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
-        "correct": true
-      },
-      {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
-        "correct": false
-      },
-      {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -1998,6 +1998,33 @@
       },
       {
         "text": "Vì họ yếu sinh lý.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "answers": [
+      {
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "correct": true
+      },
+      {
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "correct": false
+      },
+      {
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
