Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Truyền thông Mỹ: Ông Trump muốn ông Zelensky từ chức",
+    "content": "Theo truyền thông Mỹ, Tổng thống Donald Trump đã đề xuất rằng người đồng cấp Ukraine, Tổng thống Zelensky, nên từ chức để mở đường cho một cuộc bầu cử mới. Trong cuộc gặp tại Nhà Trắng, hai nhà lãnh đạo đã có một cuộc khẩu chiến căng thẳng, với ông Trump chỉ trích Zelensky không sẵn sàng nhượng bộ trong các cuộc đàm phán hòa bình với Nga. Thời điểm hiện tại, Zelensky đang gặp khó khăn trong việc tổ chức bầu cử mới do thiết quân luật.",
+    "link": "https://dantri.com.vn/the-gioi/truyen-thong-my-ong-trump-muon-ong-zelensky-tu-chuc-20250310205303270.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao ông Trump muốn ông Zelensky từ chức?",
+    "answers": [
+      {
+        "text": "Để mở đường cho một cuộc bầu cử mới tại Ukraine.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông Zelensky không đủ khả năng lãnh đạo.",
+        "correct": false
+      },
+      {
+        "text": "Do ông Trump không thích cách làm việc của ông Zelensky.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông Zelensky đã mất sự ủng hộ từ người dân.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đình công tại Đức, 3.400 chuyến bay bị hủy",
     "content": "Cuộc đình công kéo dài 24 giờ tại Đức vào ngày 10-3 đã dẫn đến việc hủy bỏ hơn 3.400 chuyến bay, ảnh hưởng đến khoảng 500.000 hành khách. Các sân bay lớn như Frankfurt và Berlin-Brandenburg đều bị ảnh hưởng nặng nề, với hoạt động hàng không gần như đình trệ. Công đoàn Verdi đã kêu gọi đình công nhằm yêu cầu tăng lương cho nhân viên khu vực công, nhưng chính phủ cho rằng các yêu cầu này là không khả thi về mặt tài chính.",
     "link": "https://tuoitre.vn/dinh-cong-tai-duc-3-400-chuyen-bay-bi-huy-20250310202057434.htm",
@@ -1238,33 +1265,6 @@
     ]
   },
   {
-    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
-    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
-    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
-    "answers": [
-      {
-        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
-        "correct": true
-      },
-      {
-        "text": "Không, bàn chân bẹt không thể chữa trị.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
-        "correct": false
-      },
-      {
-        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hội chứng Guillain - Barré nguy hiểm không?",
     "content": "Hội chứng Guillain - Barré là một bệnh lý thần kinh cơ ngoại vi tự miễn cấp tính, xảy ra khi hệ miễn dịch tấn công các dây thần kinh ngoại vi, dẫn đến tổn thương chức năng thần kinh. Bệnh có thể gây ra triệu chứng như yếu liệt, tê bì, và trong trường hợp nặng có thể dẫn đến khó thở và tử vong. Điều trị hội chứng này cần được thực hiện kịp thời tại chuyên khoa thần kinh, với các phương pháp như thay huyết tương và thuốc ức chế miễn dịch. Nếu không điều trị sớm, bệnh có thể tiến triển nặng và gây ra nhiều biến chứng nguy hiểm.",
     "link": "https://vnexpress.net/hoi-chung-guillain-barre-nguy-hiem-khong-4859113.html",
@@ -1287,6 +1287,33 @@
       },
       {
         "text": "Có thể tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
+    "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
+    "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có thể chữa bàn chân bẹt cho trẻ 9 tuổi bằng đế chỉnh hình không?",
+    "answers": [
+      {
+        "text": "Có, sử dụng đế chỉnh hình kết hợp vật lý trị liệu.",
+        "correct": true
+      },
+      {
+        "text": "Không, bàn chân bẹt không thể chữa trị.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có thể phẫu thuật khi trẻ lớn hơn.",
+        "correct": false
+      },
+      {
+        "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2030,33 +2057,6 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -2083,6 +2083,33 @@
       },
       {
         "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
