--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Cháy lớn xưởng sản xuất sơn ở Đồng Nai",
+    "content": "Vào tối ngày 10/3/2025, một vụ cháy lớn đã xảy ra tại xưởng sản xuất sơn ở xã Bình Minh, huyện Trảng Bom, Đồng Nai. Ngọn lửa bùng lên sau nhiều tiếng nổ lớn và nhanh chóng lan rộng do bên trong chứa nhiều chất dễ cháy. Mặc dù người dân và nhân viên cố gắng dập lửa nhưng không thành công. Lực lượng cứu hỏa đã được điều động đến hiện trường để khống chế đám cháy, trong khi nhiều người dân phải di dời đồ đạc do xưởng nằm cạnh khu dân cư.",
+    "link": "https://vnexpress.net/chay-lon-xuong-san-xuat-son-o-dong-nai-4859343.html",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 7,
+    "question": "Vụ cháy xưởng sản xuất sơn ở Đồng Nai xảy ra vào thời gian nào?",
+    "answers": [
+      {
+        "text": "Tối ngày 10/3/2025",
+        "correct": true
+      },
+      {
+        "text": "Sáng ngày 10/3/2025",
+        "correct": false
+      },
+      {
+        "text": "Chiều ngày 10/3/2025",
+        "correct": false
+      },
+      {
+        "text": "Tối ngày 11/3/2025",
+        "correct": false
+      },
+      {
+        "text": "Sáng ngày 11/3/2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Truyền thông Mỹ: Ông Trump muốn ông Zelensky từ chức",
     "content": "Theo truyền thông Mỹ, Tổng thống Donald Trump đã đề xuất rằng người đồng cấp Ukraine, Tổng thống Zelensky, nên từ chức để mở đường cho một cuộc bầu cử mới. Trong cuộc gặp tại Nhà Trắng, hai nhà lãnh đạo đã có một cuộc khẩu chiến căng thẳng, với ông Trump chỉ trích Zelensky không sẵn sàng nhượng bộ trong các cuộc đàm phán hòa bình với Nga. Thời điểm hiện tại, Zelensky đang gặp khó khăn trong việc tổ chức bầu cử mới do thiết quân luật.",
     "link": "https://dantri.com.vn/the-gioi/truyen-thong-my-ong-trump-muon-ong-zelensky-tu-chuc-20250310205303270.htm",
@@ -1561,33 +1592,6 @@
     ]
   },
   {
-    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
-    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
-    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
-    "answers": [
-      {
-        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chữa bàn chân bẹt cho trẻ 9 tuổi được không?",
     "content": "Bài viết cung cấp thông tin về tình trạng bàn chân bẹt ở trẻ em và khả năng điều trị cho trẻ 9 tuổi. Bàn chân bẹt là tình trạng không có độ lõm ở lòng bàn chân, có thể gây đau nhức và ảnh hưởng đến các bộ phận khác của cơ thể. Phương pháp điều trị thường được khuyên là sử dụng đế chỉnh hình kết hợp với vật lý trị liệu, giúp tái tạo vòm bàn chân và ngăn ngừa biến chứng. Cha mẹ nên đưa trẻ đến bệnh viện để được khám và điều trị phù hợp.",
     "link": "https://vnexpress.net/chua-ban-chan-bet-cho-tre-9-tuoi-duoc-khong-4859115.html",
@@ -1610,6 +1614,33 @@
       },
       {
         "text": "Bàn chân bẹt sẽ tự khỏi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những thắc mắc thường gặp về dậy thì ở bé gái",
+    "content": "Bài viết cung cấp thông tin về những thắc mắc thường gặp ở bé gái trong giai đoạn dậy thì, từ 9 đến 13 tuổi. Các thay đổi cơ thể như sự phát triển của ngực, tăng chiều cao, và sự xuất hiện của mụn trứng cá được đề cập. Những câu hỏi phổ biến như lý do đổ mồ hôi nhiều, sự phát triển của ngực, và tình trạng tăng cân cũng được giải thích. Đặc biệt, bài viết nhấn mạnh rằng những thay đổi này là bình thường và trẻ nên giữ gìn vệ sinh và tham khảo ý kiến bác sĩ khi cần.",
+    "link": "https://vnexpress.net/nhung-thac-mac-thuong-gap-ve-day-thi-o-be-gai-4858975.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Bé gái thường gặp phải những thay đổi gì trong giai đoạn dậy thì?",
+    "answers": [
+      {
+        "text": "Sự phát triển của ngực, tăng chiều cao và nổi mụn trứng cá.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tăng cân mà không có sự thay đổi khác.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phát triển chiều cao mà không có sự thay đổi nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Không có sự thay đổi nào trong giai đoạn dậy thì.",
         "correct": false
       }
     ]
@@ -2380,28 +2411,28 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "Vì họ không thích đi xe.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -2438,28 +2469,28 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì họ không thích đi xe.",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "Vì họ yếu sinh lý.",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
