Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Đề nghị truy tố 17 người trong chuyên án đất đai tại Bà Rịa - Vũng Tàu",
+    "content": "Cơ quan cảnh sát điều tra - Công an tỉnh Bà Rịa - Vũng Tàu đã hoàn tất kết luận điều tra và đề nghị truy tố 17 bị can liên quan đến vụ án lừa đảo, làm giả giấy tờ đất đai. Trong số này, Nguyễn Văn Thanh bị đề nghị truy tố về 3 tội danh, bao gồm lừa đảo và làm giả con dấu. Vụ án liên quan đến việc làm giả giấy tờ để bán đất, gây thiệt hại cho nạn nhân hơn 170 tỷ đồng.",
+    "link": "https://tuoitre.vn/de-nghi-truy-to-17-nguoi-trong-chuyen-an-dat-dai-tai-ba-ria-vung-tau-20250310215746541.htm",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Có bao nhiêu người bị đề nghị truy tố trong vụ án đất đai tại Bà Rịa - Vũng Tàu?",
+    "answers": [
+      {
+        "text": "10 người",
+        "correct": false
+      },
+      {
+        "text": "17 người",
+        "correct": true
+      },
+      {
+        "text": "5 người",
+        "correct": false
+      },
+      {
+        "text": "20 người",
+        "correct": false
+      },
+      {
+        "text": "15 người",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cháy lớn xưởng sản xuất sơn ở Đồng Nai",
     "content": "Vào tối ngày 10/3/2025, một vụ cháy lớn đã xảy ra tại xưởng sản xuất sơn ở xã Bình Minh, huyện Trảng Bom, Đồng Nai. Ngọn lửa bùng lên sau nhiều tiếng nổ lớn và nhanh chóng lan rộng do bên trong chứa nhiều chất dễ cháy. Mặc dù người dân và nhân viên cố gắng dập lửa nhưng không thành công. Lực lượng cứu hỏa đã được điều động đến hiện trường để khống chế đám cháy, trong khi nhiều người dân phải di dời đồ đạc do xưởng nằm cạnh khu dân cư.",
     "link": "https://vnexpress.net/chay-lon-xuong-san-xuat-son-o-dong-nai-4859343.html",
@@ -2021,33 +2052,6 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
-    "answers": [
-      {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
-        "correct": true
-      },
-      {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ không thích đi xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ yếu sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "PVcomBank ưu đãi với lãi suất chưa đến 4%/năm",
     "content": "Ngân hàng TMCP Đại Chúng Việt Nam (PVcomBank) vừa công bố gói tín dụng ưu đãi mang tên 'Hành trình mới, sống trọn ước mơ' với lãi suất chỉ từ 3,99%/năm. Gói vay này được áp dụng cho cá nhân có nhu cầu mua nhà và hộ kinh doanh, với hạn mức vay lên đến 85% giá trị tài sản và thời gian vay tối đa 35 năm. PVcomBank cũng cam kết đơn giản hóa thủ tục và linh hoạt trong việc chứng minh thu nhập để giúp khách hàng dễ dàng tiếp cận nguồn vốn.",
     "link": "https://tuoitre.vn/pvcombank-uu-dai-voi-lai-suat-chua-den-4-nam-20250310115138353.htm",
@@ -2074,6 +2078,33 @@
       },
       {
         "text": "4,0%/năm",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "answers": [
+      {
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "correct": true
+      },
+      {
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ không thích đi xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -3958,6 +3989,33 @@
     ]
   },
   {
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "answers": [
+      {
+        "text": "Bệnh võng mạc tiểu đường",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tiểu đường type 1",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh glôcôm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Uống sữa có làm tăng cholesterol?",
     "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
     "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
@@ -4007,33 +4065,6 @@
       },
       {
         "text": "Chỉ nên đầu tư vào bất động sản ngay lập tức.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
-    "answers": [
-      {
-        "text": "Bệnh võng mạc tiểu đường",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tiểu đường type 1",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -4783,37 +4814,6 @@
       },
       {
         "text": "NATO sẽ mạnh mẽ hơn khi không có Mỹ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tổng Bí thư Tô Lâm tiếp lãnh đạo các tập đoàn, doanh nghiệp lớn của Indonesia",
-    "content": "Trong chuyến thăm Indonesia, Tổng Bí thư Tô Lâm đã tiếp lãnh đạo các tập đoàn lớn của nước này, trong đó có Tập đoàn Ciputra và Gojek. Ông Tô Lâm khuyến khích các doanh nghiệp Indonesia đầu tư vào Việt Nam, đồng thời nhấn mạnh tầm quan trọng của việc thúc đẩy hợp tác kinh tế giữa hai nước. Tổng Bí thư cũng đề nghị các tập đoàn tiếp tục nghiên cứu và triển khai các dự án mới tại Việt Nam nhằm góp phần vào mục tiêu phát triển kinh tế chung.",
-    "link": "https://tuoitre.vn/tong-bi-thu-to-lam-tiep-lanh-dao-cac-tap-doan-doanh-nghiep-lon-cua-indonesia-20250309215357821.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Tổng Bí thư Tô Lâm đã gặp gỡ lãnh đạo tập đoàn nào trong chuyến thăm Indonesia?",
-    "answers": [
-      {
-        "text": "Tập đoàn Ciputra",
-        "correct": true
-      },
-      {
-        "text": "Tập đoàn Samsung",
-        "correct": false
-      },
-      {
-        "text": "Tập đoàn Toyota",
-        "correct": false
-      },
-      {
-        "text": "Tập đoàn Apple",
-        "correct": false
-      },
-      {
-        "text": "Tập đoàn Microsoft",
         "correct": false
       }
     ]
