Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Đầy hơi, chướng bụng - dấu hiệu mơ hồ ung thư buồng trứng",
+    "content": "Ung thư buồng trứng là căn bệnh nguy hiểm, gây tử vong cho khoảng 150.000 phụ nữ mỗi năm, nhưng triệu chứng thường bị nhầm lẫn với các vấn đề sức khỏe khác. Các triệu chứng như đầy hơi, chướng bụng và đau vùng chậu có thể là dấu hiệu của bệnh, nhưng thường được bỏ qua do tính mơ hồ. Chẩn đoán sớm có thể tăng tỷ lệ sống sót lên 93%, trong khi tỷ lệ này giảm xuống chỉ còn 13% ở giai đoạn muộn. Phụ nữ nên chú ý đến các triệu chứng và đi khám khi nghi ngờ mắc bệnh.",
+    "link": "https://vnexpress.net/day-hoi-chuong-bung-dau-hieu-mo-ho-ung-thu-buong-trung-4858956.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Đầy hơi và chướng bụng có thể là dấu hiệu của bệnh gì?",
+    "answers": [
+      {
+        "text": "Ung thư buồng trứng",
+        "correct": true
+      },
+      {
+        "text": "Đau dạ dày",
+        "correct": false
+      },
+      {
+        "text": "Viêm ruột thừa",
+        "correct": false
+      },
+      {
+        "text": "Hội chứng ruột kích thích",
+        "correct": false
+      },
+      {
+        "text": "Tắc nghẽn đường tiêu hóa",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
